src/ui/snapshots/terminal_rpg__ui__tests__inspection_wall_ascii_color.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
+ The Ossuary ---------------------------------------++ Inspect ---------------+
|#                                                   ||INSPECT                 |
|                                        #####       ||0,0  VISIBLE            |
|                                     ..........     ||                        |
|                                    #..........#    ||Ossuary Wall            |
|                                    +...........    ||Mortared bone and       |
|                                    #..........#    ||lightless stone.        |
|                                  ........@......#  ||                        |
|                                    #..........#    ||                        |
|                                    #..........#    ||                        |
|                                    #..........     ||                        |
|                                        #####       ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
